--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.exclude": {
         ".devcontainer": true,
-        ".vscode": true
+        ".vscode": true,
+        ".github": true
     },
     "workbench.editorAssociations": {
         "{git}:/**/*.{arr}": "default"
